--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
 
 <head>
-    <title>https://pythonbasics.org</title>
+    <title>resume voice cloning</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div align="center">
+    <div class="container">
     <h3 id="demo" onclick="myFunction()"> web demo </h3>
     <script>function myFunction() { document.getElementById("demo").style.color = "red" }</script>
-
+    
     <form action="/">
         <!-- <input type="hidden" name="isButtonPressed" value="true"> -->
         <input type="text" name="question" value="">
